# isA_Agent_SDK

./: .gitignore  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
deployment/: build-dev.sh
deployment/environments/: dev.env
deployment/requirements/: base_dev.txt  dev.txt
docs/: a2a.md  agent-client.md  api-reference.md  base-node-migration.md  checkpointing.md  comparison-claude-agent-teams-vs-isa-sdk.md  concepts.md  deployment.md  desktop-execution.md  examples.md  features.md  human-in-the-loop.md  index.md  memory.md  messages.md  options.md  quickstart.md  skills.md  steward.md  streaming.md  structured-outputs.md  support.md  swarm.md  system-prompts.md  testing.md  tools.md  triggers.md
docs/product/: agent_creation_status.md
docs/research/: claude_comparison.md
isa_agent_sdk/: __init__.py  _client.py  _messages.py  _query.py  _skills.py  _structured.py  _tools.py  _triggers.py  a2a.py  agent_client.py  errors.py  options.py
isa_agent_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
isa_agent_sdk/agent_types/: agent_state.py  common_types.py  event_types.py  request_models.py
isa_agent_sdk/agents/: __init__.py  agent.py  handoff.py  multi_agent.py  swarm.py  swarm_types.py
isa_agent_sdk/clients/: __init__.py  base.py  desktop_execution_client.py  mcp_client.py  model_client.py  pool_manager_client.py  session_client.py  storage_client.py
isa_agent_sdk/components/: __init__.py  billing_service.py  multimodal_processor.py  session_service.py  storage_service.py  user_service.py
isa_agent_sdk/core/config/: __init__.py  agent_config.py  consul_config.py  infra_config.py  model_config.py  service_config.py
isa_agent_sdk/core/errors/: __init__.py
isa_agent_sdk/core/resilience/: __init__.py  circuit_breaker.py  connection_limiter.py  system_protection.py
isa_agent_sdk/dag/: __init__.py  models.py  scheduler.py
isa_agent_sdk/graphs/: __init__.py  conversation_graph.py  graph_config_service.py  graph_registry_with_auth.py  graph_stream.py  multi_agent_graph.py  smart_agent_graph.py
isa_agent_sdk/graphs/utils/: context_init.py  context_schema.py  context_update.py  memory_curation_utils.py.old  memory_utils.py
isa_agent_sdk/nodes/: __init__.py  agent_executor_node.py  base_node.py  failsafe_node.py  reason_node.py  response_node.py  summarization_node.py  tool_node.py
isa_agent_sdk/nodes/agent_nodes/: __init__.py  (+1 more)
isa_agent_sdk/services/: agent_config_store.py  agent_creation.py  chat_service.py  hardware_service.py  multi_agent_runner.py
isa_agent_sdk/utils/: __init__.py  logger.py  mcp_utils.py  project_context.py
tests/: test_agent_config_store.py  test_agent_creation.py  test_agent_creation_generated.py  test_audit_coverage.py  test_client.py  test_dag.py  test_e2e_execution_modes.py  test_memory_e2e.py  test_multi_agent_runner.py  test_query_sync.py  test_swarm.py  test_swarm_e2e.py
(+55 files in other folders)
